uso de normalizr

--- a/src/views/partials/ch.handlebars
+++ b/src/views/partials/ch.handlebars
@@ -2,6 +2,7 @@
     <p id="username"></p>
 
     <form id="chatForm">
+        <label for="messageChat">Mensaje:</label>
         <input type="text" id="messageChat">
         <button type="submit">Enviar</button>
     </form>
