--- a/src/views/partials/importScripts.handlebars
+++ b/src/views/partials/importScripts.handlebars
@@ -8,3 +8,4 @@
 
 {{!-- sweetalert --}}
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="https://cdn.jsdelivr.net/npm/normalizr@3.6.1/dist/normalizr.browser.min.js"></script>
