--- a/src/views/info.handlebars
+++ b/src/views/info.handlebars
@@ -6,4 +6,5 @@
     <p>execPath: {{data.execPath}}</p>
     <p>pid: {{data.pid}}</p>
     <p>directory: {{data.directory}}</p>
+    <p>numberOfCores: {{data.numberOfCores}}</p>
 </div>
